# cmake-qt-project

./: CMakeLists.txt  build.sh
src/: call_back.c  call_back.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
